# contextcore-coyote

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
src/contextcore_coyote/: __init__.py  cli.py  config.py  models.py  pup_cli.py
src/contextcore_coyote/agents/: __init__.py  designer.py  implementer.py  investigator.py  knowledge.py  tester.py
src/contextcore_coyote/knowledge/: __init__.py  lessons.py
src/contextcore_coyote/o11y/: __init__.py  client.py  queries.py
src/contextcore_coyote/pipeline/: __init__.py  core.py  stage.py
